--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -73,11 +73,13 @@ section {float:left;width:100%;padding:5%;}
 
 #personal {background-color:#272727;padding:0;color:white;}
 #personal h2 {color:white;border-color:white;margin-top:5%;}
-#personal li {display:inline;float:left;width:25%;height:35vh;background-position:center center;background-repeat:no-repeat;background-size:cover;display:table;}
-#personal li a {display:block;float:left;background-color:black;opacity:0.7;width:100%;height:100%;color:#666;text-align:center;vertical-align:center;display:table-cell;}
+#personal li {display:table;float:left;width:25%;height:35vh;background-position:center center;background-repeat:no-repeat;background-size:cover;}
+#personal li a {float:left;background-color:black;opacity:0.7;width:100%;height:100%;color:#666;text-align:center;vertical-align:middle;display:table-cell;}
 #personal li a:hover {background-color:#FAC200;opacity:0.8;}
 #personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;}
 
+#personal li.soccer {background-image:url(../images/softwares-techniques/phil-icon3.svg);}
+#personal li.soccer a:hover {background-color:#2D5BFF;color:white;}
 #personal li.evernote {background-image:url(../images/softwares-techniques/evernote-cover.png);}
 #personal li.evernote a:hover {background-color:#2DBE60;color:white;}
 #personal li.philz-coffee {background-image:url(../images/softwares-techniques/philz-coffee.png);}
