--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {font-weight:400;color:black;margin-bottom:0.5em;font-fam
 h1 {font-size:6vw;}
 h2 {font-size:24px;text-align:center;border-top:2px solid black;padding-top:0.5em;margin-bottom:0.5em;text-transform:uppercase;width:60%;margin:0 auto;max-width:780px;}
 h2 strong {font-weight:300;}
-h3 {font-size:2vw;color:white;}
+h3 {font-size:20px;color:white;}
 p {font-size:18px;margin-bottom:32px;line-height:32px;font-family:Georgia, "Times New Roman", Times, serif;}
 button {cursor:pointer;text-transform:uppercase;color:white;font-family:"Fjalla One", sans-serif;font-weight:normal;background:transparent;border:solid 3px white;}
 a {color:black;text-decoration:none;}
@@ -58,8 +58,9 @@ section {float:left;width:100%;padding:5%;overflow:hidden;}
 
 #work {background-color:#F3F2EE;}
 #work h2 {margin-bottom:2em;}
+#work ul {max-width:1400px;margin:0 auto;}
 #work li {display:inline;float:left;width:30%;background-color:white;border-top:solid 3px #FAC200;flex:1;margin-bottom:5em;}
-#work li:nth-child(2) {margin:0 5%;}
+#work li:nth-child(2) {margin-left:5%;margin-right:5%;}
 #work li h4 {padding:1em;padding-bottom:0.4em;}
 #work h4 {padding-bottom:0;}
 #work li a figure {position:relative;}
@@ -98,31 +99,43 @@ section {float:left;width:100%;padding:5%;overflow:hidden;}
 #personal li.textmate a:hover {background-color:pink;color:white;}
 
 /* Bottom */
-footer {text-align:center;background-color:white;color:black;float:left;width:100%;padding:2vw;}
+footer {text-align:center;background-color:white;color:black;float:left;width:100%;padding:5%;}
 footer a {display:block;color:black;}
-footer nav {font-size:3vw;}
+footer nav {font-size:40px;}
 footer nav a {display:inline;text-decoration:none;}
 
 /* Media Queries */
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-	h2 {font-size:24px;text-align:center;}
+	h1 {font-size:40px;}
+	h2 {font-size:24px;text-align:center;width:90%;}
+	h3 {font-size:20px;}
+	#bio p.intro, #recent-work p, #stats p {width:90%;}
+	
+	section {padding:10%;}
 	
 	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
 	
-	header div {width:100%;height:auto;float:left;flex:inherit;position:relative;height:400px;}
-	header div img {width:60%;height:auto;position:absolute;bottom:0;left:20%;}
+	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:240px;}
+	header div img {width:80%;height:auto;position:absolute;bottom:0;left:10%;}
 	header div.intro {width:100%;float:left;}
-	header div.intro button {width:100%;}
+	header div.intro button {width:100%;font-size:28px;}
+	header div.intro h1 small {font-size:10px;}
 
-	#bio p.intro {font-size:20px;line-height:32px;width:100%;}
-	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:100%;margin:0 auto;}
+	#bio p.intro {font-size:20px;line-height:32px;width:90%;}
+	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
 	
-	#work li {width:100%;margin:0;}
+	#work li {width:100%;}
+	#work li:nth-child(2) {margin-left:0;margin-right:0;}
+	
+	#stats li {width:50%;}
+	
+	#personal li {width:50%;}
 }
 
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width: 321px) {
+
 }
 
 /* Smartphones (portrait) ----------- */
@@ -130,10 +143,8 @@ footer nav a {display:inline;text-decoration:none;}
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-	#bio p.intro {font-size:32px;line-height:44px;width:80%;}
-	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:80%;margin:0 auto;}
-	.work li {display:block;float:none;width:100%;}
+@media (min-width : 768px) and (max-width : 1024px) {
+	
 }
 
 /* iPads (landscape) ----------- */
