--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -19,10 +19,20 @@ p a:hover {background-color:#FAC200;color:black;}
 
 .flexbox {display:-webkit-flex;display:-ms-flexbox;display:flex;overflow:hidden;}
 
+nav.breadcrumb {position:fixed;right:0.5em;top:50%;width:1.5em;height:1px;font-size:12px;}
+nav.breadcrumb a {float:right;width:100%;display:block;background-color:black;text-indent:-2em;margin-bottom:0.2em;padding:0.2em;height:auto;overflow:hidden;}
+nav.breadcrumb a:hover {width:200%;text-indent:0;}
+nav.breadcrumb a[href="#intro"] {height:1.3em;}
+nav.breadcrumb a[href="#bio"] {height:2.5em;}
+nav.breadcrumb a[href="#recent-work"] {height:1.5em;}
+nav.breadcrumb a[href="#work"] {height:1.3em;}
+nav.breadcrumb a[href="#stats"] {height:1.5em;}
+nav.breadcrumb a[href="#personal"] {height:1.6em;}
+
 /* Top */
 header {background-color:#FAC200;overflow:hidden;position:relative;}
 header div {width:45%;height:auto;float:right;flex:1;position:relative;}
-header div img {width:100%;height:auto;position:absolute;}
+header div img {width:100%;height:auto;position:absolute;bottom:0;}
 header div.intro {float:left;width:55%;padding:5%;}
 header div.intro h1 {float:left;text-transform:uppercase;text-align:left;padding:0.1em 0;color:white;border:solid 3px white;border-left:none;border-right:none;position:relative;}
 header div.intro h1 small {font-size:1.4vw;color:white;background-color:#FAC200;position:absolute;bottom:-10%;left:25%;width:50%;text-align:center;}
@@ -80,19 +90,14 @@ section {float:left;width:100%;padding:5%;overflow:hidden;}
 #stats li big {display:block;font-size:6em;color:black;}
 #stats li small {font-size:1em;margin-top:-1em;float:left;width:100%;letter-spacing:0.4em;}
 #stats li:hover {margin-top:-2em;}
-#stats li:hover i {font-size:7em;}
-#stats li:hover i.icon-rubydiamond {color:red;}
-#stats li:hover i.icon-phpoval {color:red;}
-#stats li:hover i.icon-phpoval {color:purple;}
-#stats li:hover i.icon-frontendscreen {color:black;}
-#stats li:hover i.icon-cloudpm {color:blue;}
+#stats li:hover i {font-size:7em;color:black;}
 #stats p {margin:2em auto;}
 
 #personal {background-color:#272727;padding:0;color:white;}
 #personal hr {width:10%;margin:0.5em auto 2em auto;border:none;border-top:2px solid white;}
 #personal h2 {color:white;border-color:white;margin-top:5%;}
 #personal li {display:table;float:left;width:25%;height:35vh;background-position:center center;background-repeat:no-repeat;background-size:cover;}
-#personal li a {float:left;background-color:black;background-color:rgba(0, 0, 0, 0.7);width:100%;height:100%;color:white;text-align:center;vertical-align:middle;display:table-cell;}
+#personal li a {float:left;background-color:#272727;background-color:rgba(30, 30, 30, 0.7);width:100%;height:100%;color:white;text-align:center;vertical-align:middle;display:table-cell;}
 #personal li a:hover {background-color:#FAC200;opacity:0.8;}
 #personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;}
 #personal li a:hover hr {width:50%;}
