--- a/stylesheets/icons.css
+++ b/stylesheets/icons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-vv6y1y');
-	src:url('fonts/icomoon.eot?#iefix-vv6y1y') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-vv6y1y') format('woff'),
-		url('fonts/icomoon.ttf?-vv6y1y') format('truetype'),
-		url('fonts/icomoon.svg?-vv6y1y#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-2gesv7');
+	src:url('fonts/icomoon.eot?#iefix-2gesv7') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-2gesv7') format('woff'),
+		url('fonts/icomoon.ttf?-2gesv7') format('truetype'),
+		url('fonts/icomoon.svg?-2gesv7#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -31,8 +31,29 @@
 	content: "\e601";
 }
 
-.icon-phpoval:before {
+.icon-phpoval .path1:before {
 	content: "\e602";
+	color: rgb(0, 0, 0);
+}
+.icon-phpoval .path2:before {
+	content: "\e604";
+	margin-left: -1.77734375em;
+	color: rgb(255, 255, 255);
+}
+.icon-phpoval .path3:before {
+	content: "\e605";
+	margin-left: -1.77734375em;
+	color: rgb(0, 0, 0);
+}
+.icon-phpoval .path4:before {
+	content: "\e606";
+	margin-left: -1.77734375em;
+	color: rgb(255, 255, 255);
+}
+.icon-phpoval .path5:before {
+	content: "\e607";
+	margin-left: -1.77734375em;
+	color: rgb(0, 0, 0);
 }
 
 .icon-rubydiamond:before {
