--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -19,18 +19,20 @@ p a:hover {background-color:#FAC200;color:black;}
 
 .flexbox {display:-webkit-flex;display:-ms-flexbox;display:flex;overflow:hidden;}
 
-nav.breadcrumb {position:fixed;right:0.5em;top:50%;width:1.5em;height:1px;font-size:12px;}
-nav.breadcrumb a {float:right;width:100%;display:block;background-color:black;text-indent:-2em;margin-bottom:0.2em;padding:0.2em;height:auto;overflow:hidden;}
-nav.breadcrumb a:hover {width:200%;text-indent:0;}
-nav.breadcrumb a[href="#intro"] {height:1.3em;}
+nav.breadcrumb {position:fixed;right:2em;top:45%;height:1px;font-size:12px;}
+nav.breadcrumb a {width:1em;height:1em;display:block;background-color:white;margin-bottom:0.5em;padding:0.2em;border-radius:100%;border:solid 2px white;text-align:right;overflow:hidden;text-indent:9999px;}
+nav.breadcrumb a:hover, nav.breadcrumb a.selected {background-color:black;}
+/*nav.breadcrumb a[href="header"] {height:1.3em;}
 nav.breadcrumb a[href="#bio"] {height:2.5em;}
 nav.breadcrumb a[href="#recent-work"] {height:1.5em;}
 nav.breadcrumb a[href="#work"] {height:1.3em;}
 nav.breadcrumb a[href="#stats"] {height:1.5em;}
-nav.breadcrumb a[href="#personal"] {height:1.6em;}
+nav.breadcrumb a[href="#personal"] {height:1.6em;}*/
 
-/* Top */
-header {background-color:#FAC200;overflow:hidden;position:relative;}
+/* Sections */
+section {float:left;width:100%;padding:5%;overflow:hidden;}
+
+header {background-color:#FAC200;overflow:hidden;position:relative;padding:0;}
 header div {width:45%;height:auto;float:right;flex:1;position:relative;}
 header div img {width:100%;height:auto;position:absolute;bottom:0;}
 header div.intro {float:left;width:55%;padding:5%;}
@@ -50,9 +52,6 @@ header div.intro a.animated span {color:#FAC200;font-size:1.2em;font-family:Geor
 header div.intro a.animated span strong {display:block;font-size:3em;}
 header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:white;}
 
-/* Sections */
-section {float:left;width:100%;padding:5%;overflow:hidden;}
-
 #bio {padding:5%;}
 #bio p.intro, #recent-work p, #stats p {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;max-width:700px;}
 #bio p.intro strong, #bio p a {font-family:"Fjalla One", sans-serif;font-weight:400;font-style:normal;text-transform:uppercase;}
@@ -63,9 +62,11 @@ section {float:left;width:100%;padding:5%;overflow:hidden;}
 #recent-work {background:url(../images/desk-angle.jpg) center top;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;}
 #recent-work h2 {border-color:white;}
 #recent-work h2 a {font-family:Georgia, "Times New Roman", Times, serif;text-transform:lowercase;font-style:italic;background-color:#FAC200;color:black;}
+#recent-work h2 a:hover {color:white;}
 #recent-work h2, #recent-work h3, #recent-work a {color:white;}
 #recent-work p, #stats p {padding:0;border:none;clear:both;line-height:1.2em;margin-bottom:0;}
 #recent-work img {margin:4em 0;width:20%;height:auto;}
+#recent-work img:hover {opacity:0.6;}
 
 #work {background-color:#F3F2EE;}
 #work h2 {margin-bottom:2em;}
@@ -93,14 +94,18 @@ section {float:left;width:100%;padding:5%;overflow:hidden;}
 #stats li:hover i {font-size:7em;color:black;}
 #stats p {margin:2em auto;}
 
-#personal {background-color:#272727;padding:0;color:white;}
-#personal hr {width:10%;margin:0.5em auto 2em auto;border:none;border-top:2px solid white;}
-#personal h2 {color:white;border-color:white;margin-top:5%;}
-#personal li {display:table;float:left;width:25%;height:35vh;background-position:center center;background-repeat:no-repeat;background-size:cover;}
-#personal li a {float:left;background-color:#272727;background-color:rgba(30, 30, 30, 0.7);width:100%;height:100%;color:white;text-align:center;vertical-align:middle;display:table-cell;}
-#personal li a:hover {background-color:#FAC200;opacity:0.8;}
-#personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;}
+#personal {background-color:#272727;padding:5%;color:white;}
+#personal h2 {color:white;border-color:white;margin-bottom:5%;}
+#personal li {display:inline;float:left;width:20%;height:35vh;background-position:center center;background-repeat:no-repeat;background-size:cover;}
+#personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:100%;color:white;text-align:center;padding:5%;}
+#personal li:nth-child(even) a {background-color:#666;background-color:rgba(60, 60, 60, 0.7);}
+#personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
+#personal li a hr {width:10%;margin:0.5em auto 2em auto;border:none;border-top:2px solid #FAC200;}
+#personal li a small {opacity:0;font-size:1.2em;}
+#personal li a:hover {background-color:black;opacity:0.8;}
+#personal li a:hover strong {margin-top:20%;}
 #personal li a:hover hr {width:50%;}
+#personal li a:hover small {opacity:1;margin:0;}
 
 #personal li.soccer {background-image:url(../images/softwares-techniques/phil-icon3.svg);}
 #personal li.soccer a:hover {background-color:#2D5BFF;color:white;}
@@ -114,7 +119,7 @@ section {float:left;width:100%;padding:5%;overflow:hidden;}
 #personal li.textmate a:hover {background-color:pink;color:white;}
 
 /* Bottom */
-footer {text-align:center;background-color:white;color:black;float:left;width:100%;padding:5%;}
+footer {text-align:center;background-color:white;color:black;float:left;width:100%;padding:3% 5%;}
 footer a {display:block;color:black;}
 footer nav {font-size:40px;}
 footer nav a {display:inline;text-decoration:none;}
