--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -20,8 +20,10 @@ p a:hover {background-color:#FAC200;color:black;}
 .flexbox {display:-webkit-flex;display:-ms-flexbox;display:flex;overflow:hidden;}
 
 nav.breadcrumb {position:fixed;right:2em;top:45%;height:1px;font-size:12px;}
-nav.breadcrumb a {width:1em;height:1em;display:block;background-color:white;margin-bottom:0.5em;padding:0.2em;border-radius:100%;border:solid 2px white;text-align:right;overflow:hidden;text-indent:9999px;}
+nav.breadcrumb a {width:1em;height:1em;display:block;background-color:white;margin-bottom:0.5em;padding:0.2em;border-radius:100%;border:solid 2px white;text-align:right;position:relative;text-indent:99999px;overflow:hidden;}
 nav.breadcrumb a:hover, nav.breadcrumb a.selected {background-color:black;}
+/*nav.breadcrumb a span {position:absolute;top:-0.5em;right:1.5em;opacity:0;text-align:right;width:8em;display:block;background-color:white;font-size:1.4em;padding:0.3em;}
+nav.breadcrumb a:hover span {opacity:1;}*/
 /*nav.breadcrumb a[href="header"] {height:1.3em;}
 nav.breadcrumb a[href="#bio"] {height:2.5em;}
 nav.breadcrumb a[href="#recent-work"] {height:1.5em;}
@@ -57,6 +59,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #bio p.intro strong, #bio p a {font-family:"Fjalla One", sans-serif;font-weight:400;font-style:normal;text-transform:uppercase;}
 #bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;max-width:700px;}
 #bio h2, #bio h3 {color:black;}
+#bio h3 {border-bottom:1px solid black;-}
 #bio p a {font-size:16px;}
 
 #recent-work {background:url(../images/desk-angle.jpg) center top;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;}
@@ -77,7 +80,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #work h4 {padding-bottom:0;}
 #work li a figure {position:relative;}
 #work li a figure img {width:100%;height:auto;-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);border-bottom:solid 3px black;}
-#work li a figure figcaption {opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;}
+#work li a figure figcaption {opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;width:100%;}
 #work li a:hover {color:white;}
 #work li a:hover figure img {-webkit-filter:none;-webkit-filter:none;filter:none;filter:none;filter:none;opacity:0;}
 #work li a figure img.replace {position:absolute;top:0;left:0em;opacity:0;-webkit-filter: blur(3px);filter:blur(3px);}
@@ -125,11 +128,39 @@ footer nav {font-size:40px;}
 footer nav a {display:inline;text-decoration:none;}
 
 /* Media Queries */
+/* iPads (portrait and landscape) ----------- */
+@media (max-width:1024px){
+	
+	
+	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:80%;margin:0 auto;max-width:800px;}
+	
+	#personal li {width:50%;}
+}
+
+/* iPads (landscape) ----------- */
+@media only screen and (max-width:1024px) and (orientation:landscape) {
+	#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:80%;margin:0 auto;max-width:700px;}
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-width:768px) and (max-width:1024px) and (orientation:portrait) {
+	#work li {display:block;float:none;width:100%;}
+	#work li:nth-child(2) {margin-left:0;margin-right:0;}
+		
+	#stats li {width:50%;height:500px;}
+}
+
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width: 320px) and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
+	body {font-size:60%;}
+	
+	nav.breadcrumb {background-color:black;top:0;right:0;position:fixed;float:left;height:30px;width:100%;}
+	nav.breadcrumb a {float:left;margin:0.8em 1em;}
+	nav.breadcrumb a:first-child {margin-left:20%;}
+	
 	h1 {font-size:40px;}
-	h2 {font-size:24px;text-align:center;width:90%;}
-	h3 {font-size:20px;}
+	h2 {font-size:20px;text-align:center;width:90%;}
+	h3 {font-size:18px;}
 	#bio p.intro, #recent-work p, #stats p {width:90%;}
 	
 	section {padding:10%;}
@@ -137,13 +168,18 @@ footer nav a {display:inline;text-decoration:none;}
 	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
 	
 	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:240px;}
-	header div img {width:80%;height:auto;position:absolute;bottom:0;left:10%;}
+	header div img {width:100%;height:auto;position:absolute;bottom:-60%;left:2%;}
 	header div.intro {width:100%;float:left;}
+	header div.intro p {font-size:18px;line-height:24px;margin-bottom:0;text-align:center;}
 	header div.intro button {width:100%;font-size:28px;}
-	header div.intro h1 small {font-size:10px;}
-
+	header div.intro h1 small {font-size:14px;width:70%;margin-left:-10%;bottom:-15%;}
+	header div.intro a.animated {display:none}
+	
 	#bio p.intro {font-size:20px;line-height:32px;width:90%;}
 	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
+	
+	#recent-work p {display:none;}
+	#recent-work img {width:80%;}
 	
 	#work li {width:100%;}
 	#work li:nth-child(2) {margin-left:0;margin-right:0;}
@@ -160,19 +196,6 @@ footer nav a {display:inline;text-decoration:none;}
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media (min-width : 768px) and (max-width : 1024px) {
-	
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-}
-
-/* iPads (portrait) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
 }
 
 /* Desktops and laptops ----------- */
