--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -14,7 +14,6 @@ p {font-size:18px;margin-bottom:32px;line-height:32px;font-family:Georgia, "Time
 button {cursor:pointer;text-transform:uppercase;color:white;font-family:"Fjalla One", sans-serif;font-weight:normal;background:transparent;border:solid 3px white;}
 a {color:black;text-decoration:none;}
 a:hover {color:#FAC200;}
-/*#personal hr, a span, a:hover span, a:hover, button, button:hover, img, img:hover, i, i:hover, #personal li a, #personal li a:hover {-webkit-transition: all 1s ease-in-out;-moz-transition: all 0.5s ease-in-out;-o-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;}*/
 p a:hover {background-color:#FAC200;color:black;}
 
 .flexbox {display:-webkit-flex;display:-ms-flexbox;display:flex;overflow:hidden;}
@@ -22,14 +21,6 @@ p a:hover {background-color:#FAC200;color:black;}
 nav.breadcrumb {position:fixed;right:2em;top:45%;height:1px;font-size:12px;}
 nav.breadcrumb a {width:1em;height:1em;display:block;background-color:white;margin-bottom:0.5em;padding:0.2em;border-radius:100%;border:solid 2px white;text-align:right;position:relative;text-indent:99999px;overflow:hidden;}
 nav.breadcrumb a:hover, nav.breadcrumb a.selected {background-color:black;}
-/*nav.breadcrumb a span {position:absolute;top:-0.5em;right:1.5em;opacity:0;text-align:right;width:8em;display:block;background-color:white;font-size:1.4em;padding:0.3em;}
-nav.breadcrumb a:hover span {opacity:1;}*/
-/*nav.breadcrumb a[href="header"] {height:1.3em;}
-nav.breadcrumb a[href="#bio"] {height:2.5em;}
-nav.breadcrumb a[href="#recent-work"] {height:1.5em;}
-nav.breadcrumb a[href="#work"] {height:1.3em;}
-nav.breadcrumb a[href="#stats"] {height:1.5em;}
-nav.breadcrumb a[href="#personal"] {height:1.6em;}*/
 
 /* Sections */
 section {float:left;width:100%;padding:5%;overflow:hidden;}
@@ -38,7 +29,7 @@ header {background-color:#FAC200;overflow:hidden;position:relative;padding:0;}
 header div {width:45%;height:auto;float:right;flex:1;position:relative;}
 header div img {width:100%;height:auto;position:absolute;bottom:0;}
 header div.intro {float:left;width:55%;padding:5%;}
-header div.intro h1 {float:left;text-transform:uppercase;text-align:left;padding:0.1em 0;color:white;border:solid 3px white;border-left:none;border-right:none;position:relative;}
+header div.intro h1 {float:left;text-transform:uppercase;text-align:center;padding:0.1em 0;color:white;border:solid 3px white;border-left:none;border-right:none;position:relative;width:100%;}
 header div.intro h1 small {font-size:1.4vw;color:white;background-color:#FAC200;position:absolute;bottom:-10%;left:25%;width:50%;text-align:center;}
 header div.intro h1 small a {color:white;}
 header div.intro h1 small a:hover {color:black;}
@@ -55,9 +46,9 @@ header div.intro a.animated span strong {display:block;font-size:3em;}
 header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:white;}
 
 #bio {padding:5%;}
-#bio p.intro, #recent-work p, #stats p {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;max-width:700px;}
+#bio p.intro, #recent-work p, #stats p {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;max-width:740px;}
 #bio p.intro strong, #bio p a {font-family:"Fjalla One", sans-serif;font-weight:400;font-style:normal;text-transform:uppercase;}
-#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;max-width:700px;}
+#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;max-width:740px;}
 #bio h2, #bio h3 {color:black;}
 #bio h3 {border-bottom:1px solid black;-}
 #bio p a {font-size:16px;}
@@ -75,7 +66,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #work h2 {margin-bottom:2em;}
 #work ul {max-width:1400px;margin:0 auto;}
 #work li {display:inline;float:left;width:30%;background-color:white;border-top:solid 3px #FAC200;flex:1;margin-bottom:5em;}
-#work li:nth-child(2) {margin-left:5%;margin-right:5%;}
+#work li:nth-child(2){margin-left:5%;margin-right:5%;}
 #work li h4 {padding:1em;padding-bottom:0.4em;}
 #work h4 {padding-bottom:0;}
 #work li a figure {position:relative;}
@@ -128,35 +119,11 @@ footer nav {font-size:40px;}
 footer nav a {display:inline;text-decoration:none;}
 
 /* Media Queries */
-/* iPads (portrait and landscape) ----------- */
-@media (max-width:1024px){
-	
-	
-	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:80%;margin:0 auto;max-width:800px;}
-	
-	#personal li {width:50%;}
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (max-width:1024px) and (orientation:landscape) {
-	#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:80%;margin:0 auto;max-width:700px;}
-}
-
-/* iPads (portrait) ----------- */
-@media only screen and (min-width:768px) and (max-width:1024px) and (orientation:portrait) {
-	#work li {display:block;float:none;width:100%;}
-	#work li:nth-child(2) {margin-left:0;margin-right:0;}
-		
-	#stats li {width:50%;height:500px;}
-}
-
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (max-width: 480px) {
-	body {font-size:60%;}
-	
-	nav.breadcrumb {background-color:black;top:0;right:0;position:fixed;float:left;height:30px;width:100%;}
-	nav.breadcrumb a {float:left;margin:0.8em 1em;}
-	nav.breadcrumb a:first-child {margin-left:20%;}
+@media only screen and (min-width:320px) and (max-width:480px){
+	body {font-size:80%;}
+
+	nav.breadcrumb {right:0.8em;}
 	
 	h1 {font-size:40px;}
 	h2 {font-size:20px;text-align:center;width:90%;}
@@ -175,6 +142,7 @@ footer nav a {display:inline;text-decoration:none;}
 	header div.intro h1 small {font-size:14px;width:70%;margin-left:-10%;bottom:-15%;}
 	header div.intro a.animated {display:none}
 	
+	#bio {padding-top:15%;}
 	#bio p.intro {font-size:20px;line-height:32px;width:90%;}
 	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
 	
@@ -182,32 +150,147 @@ footer nav a {display:inline;text-decoration:none;}
 	#recent-work img {width:80%;}
 	
 	#work li {width:100%;}
-	#work li:nth-child(2) {margin-left:0;margin-right:0;}
+	#work li:nth-child(2){margin-left:0;margin-right:0;}
 	
-	#stats li {width:50%;}
+	#stats h2 {margin-bottom:10%;}
+	#stats p {display:none;}
+	#stats li {width:50%;margin-bottom:3em;font-size:1em;}
+	#stats li i {font-size:4em;}
+	#stats li big {font-size:4em}
+	#stats li small {font-size:1em;}
+	#stats li:hover {margin-top:0;}
+	#stats li:hover i {font-size:4em;color:black;}
 	
+	#personal h2 {margin:6% auto 10% auto;}
 	#personal li {width:50%;}
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width: 321px) {
+@media only screen and (min-width:321px) and (max-width:760px){
+/*	body {font-size:100%;}
 
+	nav.breadcrumb {right:0.8em;}
+
+	h1 {font-size:40px;}
+	h2 {font-size:20px;text-align:center;width:90%;}
+	h3 {font-size:18px;}
+	#bio p.intro, #recent-work p, #stats p {width:90%;}
+
+	section {padding:10%;}
+
+	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
+
+	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:420px;}
+	header div img {width:100%;height:auto;position:absolute;bottom:-30%;left:2%;}
+	header div.intro {width:100%;float:left;}
+	header div.intro p {font-size:22px;line-height:24px;margin-bottom:0;text-align:center;}
+	header div.intro button {width:100%;font-size:28px;}
+	header div.intro h1 {width:100%;font-size:71px;}
+	header div.intro h1 small {font-size:20px;width:60%;margin-left:-5%;bottom:-15%;}
+	header div.intro a.animated {display:none}
+
+	#bio {padding-top:15%;}
+	#bio p.intro {font-size:20px;line-height:32px;width:90%;}
+	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
+
+	#recent-work p {display:none;}
+	#recent-work img {width:80%;}
+
+	#work li {width:100%;}
+	#work li:nth-child(2){margin-left:0;margin-right:0;}
+
+	#stats h2 {margin-bottom:10%;}
+	#stats p {display:none;}
+	#stats li {width:50%;margin-bottom:3em;font-size:1em;}
+	#stats li i {font-size:4em;}
+	#stats li big {font-size:4em}
+	#stats li small {font-size:1em;}
+	#stats li:hover {margin-top:0;}
+	#stats li:hover i {font-size:4em;color:black;}
+
+	#personal h2 {margin:6% auto 10% auto;}
+	#personal li {width:50%;}*/
 }
 
 /* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
+@media only screen and (max-width:960px){
+	nav.breadcrumb {right:0.8em;}
+	
+/*	h1 {font-size:40px;}
+	h2 {font-size:20px;text-align:center;width:90%;}
+	h3 {font-size:18px;}
+	#bio p.intro, #recent-work p, #stats p {width:90%;}*/
+	
+	section {padding:10%;}
+	
+	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
+	
+	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:580px;}
+	header div img {width:100%;height:auto;position:absolute;bottom:-30%;left:2%;}
+	header div.intro {width:100% !important;float:left;}
+	header div.intro p {font-size:36px;line-height:38px;margin-bottom:0;text-align:center;}
+	header div.intro button {width:100%;font-size:28px;}
+	header div.intro h1 {font-size:12vw;}
+	header div.intro h1 small {font-size:20px;width:50%;margin-left:0%;bottom:-10%;}
+	header div.intro a.animated {display:none}
+	
+	#bio p.intro {width:90%;}
+	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
+	
+	#work li {width:100%;}
+	#work li:nth-child(2){margin-left:0;margin-right:0;}
+	
+	#stats h2 {margin-bottom:10%;}
+	#stats p {display:none;}
+	#stats li {width:50%;margin-bottom:3em;font-size:1em;}
+	#stats li i {font-size:6em;}
+	#stats li big {font-size:6em}
+	#stats li small {font-size:1em;}
+	#stats li:hover {margin-top:0;}
+	#stats li:hover i {font-size:6em;color:black;}
+	
+	#personal h2 {margin:6% auto 10% auto;}
+	#personal li {width:50%;}
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width:768px) and (max-device-width:1024px){
+/* STYLES GO HERE */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width:768px) and (max-device-width:1024px) and (orientation:landscape){
+/* STYLES GO HERE */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width:768px) and (max-device-width:1024px) and (orientation:portrait){
+/* STYLES GO HERE */
 }
 
 /* Desktops and laptops ----------- */
-@media only screen and (min-width : 1224px) {
+@media only screen and (min-width:1224px){
+/* STYLES GO HERE */
 }
 
 /* Large screens ----------- */
-@media only screen and (min-width : 1824px) {
+@media only screen and (min-width:1824px){
+/* STYLES GO HERE */
 }
 
-/* iPhone 4 ----------- */
-@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
+/* iPhone 5 (portrait & landscape)----------- */
+@media only screen and (min-device-width:320px) and (max-device-width:568px){
+/* STYLES GO HERE */
+}
+
+/* iPhone 5 (landscape)----------- */
+@media only screen and (min-device-width:320px) and (max-device-width:568px) and (orientation:landscape){
+/* STYLES GO HERE */
+}
+
+/* iPhone 5 (portrait)----------- */
+@media only screen and (min-device-width:320px) and (max-device-width:568px) and (orientation:portrait){
+/* STYLES GO HERE */
 }
 
 /*Animations*/
