--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -42,7 +42,7 @@ header div.intro a.animated {float:right;margin-right:-30px;margin-top:50px;font
 header div.intro a.animated i {display:block;font-size:4vw;}
 header div.intro a.animated:hover i {color:white;}
 header div.intro a.animated span {color:#FAC200;font-size:1.2em;font-family:Georgia, "Times New Roman", Times, serif;}
-header div.intro a.animated span strong {display:block;font-size:3em;}
+header div.intro a.animated span strong {display:block;font-size:3em;margin-top:-0.5em;}
 header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:white;}
 
 #bio {padding:5%;}
@@ -90,8 +90,8 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 
 #personal {background-color:#272727;padding:5%;color:white;}
 #personal h2 {color:white;border-color:white;margin-bottom:5%;}
-#personal li {display:inline;float:left;width:20%;height:calc(20%);background-position:center center;background-repeat:no-repeat;background-size:cover;}
-#personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:100%;color:white;text-align:center;padding:5%;}
+#personal li {display:inline;float:left;width:20%;height:50%;background-position:center center;background-repeat:no-repeat;background-size:cover;}
+#personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:18vw;color:white;text-align:center;padding:5%;display:block;}
 #personal li:nth-child(even) a {background-color:#666;background-color:rgba(60, 60, 60, 0.7);}
 #personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
 #personal li a hr {width:10%;margin:0.5em auto 2em auto;border:none;border-top:2px solid #FAC200;}
@@ -100,17 +100,6 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #personal li a:hover strong {margin-top:20%;}
 #personal li a:hover hr {width:50%;}
 #personal li a:hover small {opacity:1;margin:0;}
-
-#personal li.soccer {background-image:url(../images/softwares-techniques/phil-icon3.svg);}
-#personal li.soccer a:hover {background-color:#2D5BFF;color:white;}
-#personal li.evernote {background-image:url(../images/softwares-techniques/evernote-cover.png);}
-#personal li.evernote a:hover {background-color:#2DBE60;color:white;}
-#personal li.philz-coffee {background-image:url(../images/softwares-techniques/philz-coffee.png);}
-#personal li.philz-coffee a:hover {background-color:#28231F;color:white;}
-#personal li.pomodoro {background-image:url(../images/softwares-techniques/pomodoro.png);}
-#personal li.pomodoro a:hover {background-color:red;color:white;}
-#personal li.textmate {background-image:url(../images/softwares-techniques/textmate.png);}
-#personal li.textmate a:hover {background-color:pink;color:white;}
 
 /* Bottom */
 footer {text-align:center;background-color:white;color:black;float:left;width:100%;padding:3% 5%;}
@@ -158,6 +147,7 @@ footer nav a {display:inline;text-decoration:none;}
 	
 	#personal h2 {margin:6% auto 10% auto;}
 	#personal li {width:50%;}
+	#personal li a {height:38vw;}
 }
 
 /* Smartphones (portrait and landscape) ----------- */
