add media queries

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -53,7 +53,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #bio h3 {border-bottom:1px solid black;-}
 #bio p a {font-size:16px;}
 
-#recent-work {background:url(../images/desk-angle.jpg) center top;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;}
+#recent-work {background:url(../images/desk-angle.jpg) fixed center top;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;}
 #recent-work h2 {border-color:white;}
 #recent-work h2 a {font-family:Georgia, "Times New Roman", Times, serif;text-transform:lowercase;font-style:italic;background-color:#FAC200;color:black;}
 #recent-work h2 a:hover {color:white;}
@@ -96,10 +96,12 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
 #personal li a hr {width:10%;margin:0.5em auto 2em auto;border:none;border-top:2px solid #FAC200;}
 #personal li a small {opacity:0;font-size:1.2em;}
+#personal li a small img {display:block;opacity:0;margin:0 aut;}
 #personal li a:hover, #personal li a:focus {background-color:black;opacity:0.8;}
 #personal li a:hover strong, #personal li a:focus strong {margin-top:20%;}
 #personal li a:hover hr, #personal li a:focus hr {width:50%;}
 #personal li a:hover small, #personal li a:focus small {opacity:1;margin:0;}
+#personal li a:hover small img {opacity:1;}
 
 /* Bottom */
 footer {text-align:center;background-color:white;color:black;float:left;width:100%;padding:3% 5%;}
@@ -123,15 +125,18 @@ footer nav a {display:inline;text-decoration:none;}
 	
 	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:580px;}
 	header div img {width:100%;height:auto;position:absolute;bottom:-30%;left:2%;}
-	header div.intro {width:100% !important;float:left;}
+	header div.intro {width:100% !important;float:left;height:auto;}
 	header div.intro p {font-size:36px;line-height:38px;margin-bottom:0;text-align:center;}
 	header div.intro button {width:100%;font-size:28px;}
 	header div.intro h1 {font-size:12vw;}
-	header div.intro h1 small {font-size:20px;width:50%;margin-left:0%;bottom:-10%;}
+	header div.intro h1 small {font-size:18px;width:50%;margin-left:0%;bottom:-10%;}
 	header div.intro a.animated {display:none}
 	
 	#bio p.intro {width:90%;}
 	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
+	
+	#recent-work p {width:100%;}
+	#recent-work img {width:40%;}
 	
 	#work li {width:100%;}
 	#work li:nth-child(2){margin-left:0;margin-right:0;}
@@ -154,7 +159,7 @@ footer nav a {display:inline;text-decoration:none;}
 @media only screen and (min-width:320px) and (max-width:480px){
 	body {font-size:80%;}
 
-	nav.breadcrumb {right:0.8em;}
+	nav.breadcrumb {right:0.8em;display:none;}
 	
 	h1 {font-size:40px;}
 	h2 {font-size:20px;text-align:center;width:90%;}
@@ -192,6 +197,7 @@ footer nav a {display:inline;text-decoration:none;}
 	#stats li:hover {margin-top:0;}
 	#stats li:hover i {font-size:4em;color:black;}
 	
+	#personal {padding:5% 10%;}
 	#personal h2 {margin:6% auto 10% auto;}
 	#personal li {width:50%;}
 }
